--- a/desserts/cake.html
+++ b/desserts/cake.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>cookies</title>
-
+<title>cake</title>
+<link href="../styles.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
-<h1>Food Encyclopedia</h1>
-<h2>cookies</h2>
-<h3>cookies are flat and round.</h3>
-<p>there are endless varieties to choose from.</p>
+<h1 class="web-name">Food Encyclopedia</h1>
+<h2>cake</h2>
+<h3>most commonly found at birthday parties.</h3>
+<p>sometimes it looks better than it tastes.</p>
 
 <p>Global Nav</p>
-<ul>
+<ul class="global-nav">
     <li><a href="../index.html">Home page</a></li>
     <li><a href="../fruits/fruits.html">fruits</a></li>
     <li><a href="..vegetables/vegetables.html">vegetables</a></li>
@@ -22,7 +22,7 @@
 </ul>
 
 <p>Local Nav</p>
-<ul>
+<ul class="local-nav">
     <li><a href="cookies.html">cookies</a></li>
     <li><a href="cake.html">cake</a></li>
     <li><a href="candy.html">candy</a></li>
