--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hello World</title>
+<link href="styles.css" rel="stylesheet" type="text/css" />
 
 
 </head>
 <body>
-<h1>Food Encyclopedia</h1>
+<h1 class="web-name">food encylopedia</h1>
 <h2>Food Home Page</h2>
 <h3>Browse the best food online</h3>
 <p>welcome to my food site</p>
 
 
-<ul>
+<ul class="global-nav">
     <li><a href="index.html">Home page</a></li>
     <li><a href="fruits/fruits.html">fruits</a></li>
     <li><a href="vegetables/vegetables.html">vegetables</a></li>
