--- a/vegetables/vegetables.html
+++ b/vegetables/vegetables.html
@@ -3,30 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>cookies</title>
+<title>Hello World</title>
 <link href="../styles.css" rel="stylesheet" type="text/css" />
 
 
 </head>
 <body>
-<h1 class="web-name">Food Encyclopedia</h1>
-<h2>cookies</h2>
-<h3>cookies are flat and round.</h3>
-<p>there are endless varieties to choose from.</p>
+<h1 class= "web-name">Food Encyclopedia</h1>
+<h2>Vegetables Page</h2>
+<h3>The savory things</h3>
+<p>vegetables are not as fun as fruits.</p>
 
 <p>Global Nav</p>
 <ul class="global-nav">
     <li><a href="../index.html">Home page</a></li>
     <li><a href="../fruits/fruits.html">fruits</a></li>
-    <li><a href="..vegetables/vegetables.html">vegetables</a></li>
-    <li><a href="desserts.html">desserts</a></li>
+    <li><a href="vegetables.html">vegetables</a></li>
+    <li><a href="../desserts/desserts.html">desserts</a></li>
 </ul>
 
 <p>Local Nav</p>
 <ul class="local-nav">
-    <li><a href="cookies.html">cookies</a></li>
-    <li><a href="cake.html">cake</a></li>
-    <li><a href="candy.html">candy</a></li>
+    <li><a href="carrots.html">carrots</a></li>
+    <li><a href="broccoli.html">broccoli</a></li>
+    <li><a href="peppers.html">peppers</a></li>
 </ul>
 
 </body>
