--- a/fruits/apples.html
+++ b/fruits/apples.html
@@ -1,33 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hello World</title>
+<title>apples</title>
 <link href="../styles.css" rel="stylesheet" type="text/css" />
-
 
 </head>
 <body>
-<h1 class="web-name">Food Encyclopedia </h1>
-<h2>Desserts Page</h2>
-<h3>The extra sweet and moe fun things</h3>
-<p>9.98% of humans prefer desserts over fruits or vegetables.</p>
+<h1 class="web-name">Food Encyclopedia</h1>
+<h2>apples</h2>
+<h3>The crunchy and colorful fruit.</h3>
+<p>Apples grow on trees.</p>
+<p>The bad ones come from the ground.</p>
 
 <p>Global Nav</p>
 <ul class="global-nav">
     <li><a href="../index.html">Home page</a></li>
-    <li><a href="../fruits/fruits.html">fruits</a></li>
+    <li><a href="fruits.html">fruits</a></li>
     <li><a href="../vegetables/vegetables.html">vegetables</a></li>
-    <li><a href="desserts.html">desserts</a></li>
+    <li><a href="../desserts/desserts.html">desserts</a></li>
 </ul>
 
 <p>Local Nav</p>
 <ul class="local-nav">
-    <li><a href="cookies.html">cookies</a></li>
-    <li><a href="cake.html">cake</a></li>
-    <li><a href="candy.html">candy</a></li>
+    <li><a href="apples.html">apples</a></li>
+    <li><a href="oranges.html">oranges</a></li>
+    <li><a href="grapes.html">grapes</a></li>
 </ul>
 
 </body>
